packages/optimizer/core/src/snapshots/qwik_core__test__example_issue_6920_hoisted_alias_capture.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useStore } from '@qwik.dev/core';

export const App = component$(() => {
	const store = useStore({ counter: { count: 1 }, largeData: { data: 'BIG' } });
	const counter = store.counter;
	return <button onClick$={() => counter.count++}>+1</button>;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useStore } from '@qwik.dev/core';
//
const q_App_component_button_q_e_click_cO5icSw7GDI = /*#__PURE__*/ _noopQrl("App_component_button_q_e_click_cO5icSw7GDI").m();
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ _noopQrl("App_component_ckEPmXZlub0");
//
const App_component_button_q_e_click_cO5icSw7GDI = (_, _1, counter)=>counter.count++;
q_App_component_button_q_e_click_cO5icSw7GDI.s(App_component_button_q_e_click_cO5icSw7GDI);
const App_component_ckEPmXZlub0 = ()=>{
    const store = useStore({
        counter: {
            count: 1
        },
        largeData: {
            data: 'BIG'
        }
    });
    const counter = store.counter;
    return /*#__PURE__*/ _jsxSorted("button", {
        "q-e:click": q_App_component_button_q_e_click_cO5icSw7GDI,
        "q:p": counter
    }, null, "+1", 6, "u6_0");
};
q_App_component_ckEPmXZlub0.s(App_component_ckEPmXZlub0);
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AACA,SAAqB,QAAQ,QAAQ,iBAAiB;;;;;mDAK5B,kBAAM,QAAQ,KAAK;;kCAHf;IAC7B,MAAM,QAAQ,SAAS;QAAE,SAAS;YAAE,OAAO;QAAE;QAAG,WAAW;YAAE,MAAM;QAAM;IAAE;IAC3E,MAAM,UAAU,MAAM,OAAO;IAC7B,qBAAO,WAAC;QAAO,WAAQ;;aAAyB;AACjD;;AAJA,OAAO,MAAM,oBAAM,0CAIhB\"}")
== DIAGNOSTICS ==

[]
